--- a/.env
+++ b/.env
@@ -4,6 +4,5 @@
 # Prisma supports the native connection string format for PostgreSQL, MySQL, SQLite, SQL Server, MongoDB and CockroachDB.
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
-# DATABASE_URL='mongodb+srv://jawadgithub:YsjHeEo0xd6nMC9C@trellodb.1gqo4tw.mongodb.net/trelloDB?retryWrites=true&w=majority'
+DATABASE_URL='mongodb+srv://jawadgithub:YsjHeEo0xd6nMC9C@trellodb.1gqo4tw.mongodb.net/trelloDB?retryWrites=true&w=majority'
 
-DATABASE_URL='mysql://wyo1k9bg4dtrqvcn4fdg:pscale_pw_MeLM6NpS756KXJR7ACAIQKvfvixTNcVYU0SVst8rFWi@aws.connect.psdb.cloud/trello-clone?sslaccept=strict'
